# simplesquirrel

./: .gitmodules  CMakeLists.txt  README.md
include/simplesquirrel/: allocators.hpp  args.hpp  array.hpp  binding.hpp  class.hpp  enum.hpp  exceptions.hpp  exposable_class.hpp  function.hpp  instance.hpp  object.hpp  script.hpp  simplesquirrel.hpp  table.hpp  type.hpp  util.hpp  vm.hpp
source/: args.cpp  array.cpp  binding.cpp  class.cpp  enum.cpp  exceptions.cpp  function.cpp  instance.cpp  object.cpp  script.cpp  table.cpp  vm.cpp
tests/: classes.cpp  functions.cpp  objects.cpp
